ObjectSerialization
===========================================

Version 1.0.10
-------------------------------------------
+ added serialization performance project to compare serialization times/serialized data size for various object graphs and serializer implementations
+ optimized GenericSerializerFactory to cache loaded types

Version 1.0.9
-------------------------------------------
+ added support for collection serialization (any implementing ICollection)

Version 1.0.8
-------------------------------------------
+ added support for struct serialization
+ modified BuildContext to display generated serialization code for classes on console if project is compiled in DEBUG mode

Version 1.0.7
-------------------------------------------
+ added support for null string serialization

Version 1.0.6
-------------------------------------------
+ added support for array serialization at root and class member level

Version 1.0.5
-------------------------------------------
+ added support for direct serialization of built-in primitive types, strings and null objects on root level

Version 1.0.4
-------------------------------------------
+ merged ClassTypeSerializer with PolymorphicClassTypeSerializer
+ added support for serialization of derived classes (property no longer have to be object, interface or abstract class type to trigger it)

Version 1.0.3
-------------------------------------------
+ added support for nested polymorphic classes serialization
+ added verification of serialized object
+ added test for array serialization
+ extracted serialization logic into several classes
+ finished serialization classes refactoring

Version 1.0.2
-------------------------------------------
+ added support for nested classes serialization
+ added BSD 2-Clause License file

Version 1.0.1
-------------------------------------------
+ added support for built-in types serialization

Version 1.0.0
-------------------------------------------
+ created project structure