@@ -9,27 +9,44 @@ namespace ObjectSerialization.Builders
 {
     internal class BuildContext<T>
     {
-        public readonly List<Expression> ReadExpressions = new List<Expression>();
+        private readonly List<Expression> _readExpressions = new List<Expression>();
 
         public readonly ParameterExpression ReadResultObject = Expression.Variable(typeof(T), "o");
         public readonly ParameterExpression ReaderObject = Expression.Parameter(typeof(BinaryReader), "r");
-        public readonly List<Expression> WriteExpressions = new List<Expression>();
-        public readonly ParameterExpression WriteObject = Expression.Parameter(typeof(object), "o");
+        private readonly List<Expression> _writeExpressions = new List<Expression>();
+        private readonly ParameterExpression WriteParameter = Expression.Parameter(typeof(object), "o");
+        public readonly ParameterExpression WriteObject = Expression.Variable(typeof(T), "i");
         public readonly ParameterExpression WriterObject = Expression.Parameter(typeof(BinaryWriter), "w");
 
 
-        public BuildContext(Expression readResultDefaultValue)
+        public void AddReadExpression(Expression expr)
         {
-            ReadExpressions.Add(Expression.Assign(ReadResultObject, readResultDefaultValue));
+            _readExpressions.Add(expr);
+        }
+
+        public void AddWriteExpression(Expression expr)
+        {
+            _writeExpressions.Add(expr);
+        }
+
+        public BuildContext()
+        {
+            _writeExpressions.Add(Expression.Assign(WriteObject, Expression.Convert(WriteParameter, typeof(T))));
+        }
+
+        public BuildContext(Expression readResultDefaultValue)
+            : this()
+        {
+            _readExpressions.Add(Expression.Assign(ReadResultObject, readResultDefaultValue));
         }
 
         public Func<BinaryReader, object> GetDeserializeFn()
         {
             LabelTarget label = Expression.Label(typeof(object));
-            List<Expression> expressions = ReadExpressions.ToList();
+            List<Expression> expressions = _readExpressions.ToList();
             expressions.Add(Expression.Return(label, Expression.Convert(ReadResultObject, typeof(object)), typeof(object)));
             expressions.Add(Expression.Label(label, Expression.Convert(Expression.Default(typeof(T)), typeof(object))));
-            BlockExpression body = Expression.Block(new[] { ReadResultObject }, expressions);
+            Expression body = Expression.Block(new[] { ReadResultObject }, expressions);
             Expression<Func<BinaryReader, object>> expression = Expression.Lambda<Func<BinaryReader, object>>(body, ReaderObject);
 #if DEBUG
             DumpExpression("Deserialize", expression);
@@ -39,7 +56,8 @@ namespace ObjectSerialization.Builders
 
         public Action<BinaryWriter, object> GetSerializeFn()
         {
-            Expression<Action<BinaryWriter, object>> expression = Expression.Lambda<Action<BinaryWriter, object>>(Expression.Block(WriteExpressions), WriterObject, WriteObject);
+            var blockExpression = Expression.Block(new[] { WriteObject }, _writeExpressions);
+            Expression<Action<BinaryWriter, object>> expression = Expression.Lambda<Action<BinaryWriter, object>>(blockExpression, WriterObject, WriteParameter);
 #if DEBUG
             DumpExpression("Serialize", expression);
 #endif
